# WorkerUI

./: MANIFEST.in  README.md  pyproject.toml
chimerapy/workerui/: __main__.py  models.py  server.py  state_updater.py  utils.py  worker_state_broadcaster.py
chimerapy/workerui/tests/: test_server.py  test_worker_connect.py
test-configs/: local_camera_remote_worker.json
web/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
web/src/: app.html
web/src/lib/: Client.ts  Utils.ts  models.ts  services.ts  store.ts  stores.ts
web/src/lib/Modal/: Alert.svelte
web/src/routes/: +layout.ts  +page.svelte
web/src/routes/Components/: WorkerDetails.svelte  WorkerStarter.svelte
