[project]
name = "chimerapy-workerui"
version = "0.1.0"
description = "ChimeraPy-WorkerUI: Worker UI for the ChimeraPy Framework"
authors = [
    {name = "Umesh Timalsina", email="umesh.timalsina@vanderbilt.edu"},
    {name = "Eduardo Davalos", email="eduardo.davalos.anaya@vanderbilt.edu"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">3.9"

keywords = ["multimodal", "data", "distributed", "streaming", "real-time"]

classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    'chimerapy-engine',
    'fastapi[all]'
]

[project.optional-dependencies]
test = [
    'pytest',
]

[project.urls]
homepath = "https://github.com/ChimeraPy/WorkerUI"
documentation = "https://github.com/ChimeraPy/WorkerUI"
repository = "https://github.com/ChimeraPy/WorkerUI"

# Entrypoint
[project.scripts]
cp-worker = "chimerapy.workerui.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/stable/userguide/datafiles.html
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
chimerapy = ['worker_ui/build/*']

[tool.mypy]
files = "chimerapy"
ignore_missing_imports = true

# Reference:
# https://stackoverflow.com/questions/4673373/logging-within-pytest-tests

[tool.pytest.ini_options]
asyncio_mode = 'auto'

# Logging + CLI
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Logging + File
log_file = "chimerapy-engine-test.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# Timeout
faulthandler_timeout=300

# Ignore warnings
filterwarnings = "ignore::DeprecationWarning"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')"
]
